# rustlab

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  PLAN.md  README.md  llms.txt
crates/rustlab-cli/: Cargo.toml
crates/rustlab-cli/src/: cli.rs  color.rs  main.rs
crates/rustlab-cli/src/commands/: convolve.rs  filter.rs  info.rs  mod.rs  notebook.rs  plot.rs  repl.rs  run.rs  window.rs
crates/rustlab-cli/tests/: examples.rs
crates/rustlab-core/: Cargo.toml
crates/rustlab-core/src/: error.rs  lib.rs  types.rs
crates/rustlab-core/src/traits/: decompose.rs  filter.rs  mod.rs  transform.rs
crates/rustlab-dsp/: Cargo.toml
crates/rustlab-dsp/src/: convolution.rs  error.rs  fixed.rs  lib.rs  tests.rs  upfirdn.rs  vector_calc.rs
crates/rustlab-dsp/src/fft/: mod.rs
crates/rustlab-dsp/src/fir/: design.rs  kaiser.rs  mod.rs  pm.rs
crates/rustlab-dsp/src/iir/: butterworth.rs  mod.rs
crates/rustlab-dsp/src/window/: mod.rs
crates/rustlab-notebook/: Cargo.toml
crates/rustlab-notebook/src/: execute.rs  lib.rs  main.rs  parse.rs  render.rs  render_latex.rs
crates/rustlab-plot/: Cargo.toml
crates/rustlab-plot/src/: ascii.rs  contour.rs  error.rs  figure.rs  file.rs  html.rs  lib.rs  live.rs  report.rs  theme.rs  viewer_client.rs  viewer_live.rs
crates/rustlab-proto/: Cargo.toml
crates/rustlab-proto/src/: lib.rs
crates/rustlab-script/: Cargo.toml
crates/rustlab-script/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  tests.rs
crates/rustlab-script/src/eval/: builtins.rs  mod.rs  output.rs  profile.rs  toml_io.rs  value.rs
crates/rustlab-viewer/: Cargo.toml
crates/rustlab-viewer/src/: app.rs  figure.rs  main.rs  net.rs  render.rs  surface.rs
dev/issues/: notebook-tui-suppression.md
dev/plans/: audio_streaming.md  controls.md  controls_bootcamp.md  em_lab_requests.md  lambda.md  live_plot.md  matrix_vector_coercion.md  notebook_future.md  notebook_report.md  plot_output_simplification.md  profiling.md  sparse.md  tensor3.md
dev/requests/: heatmap-image-builtins.md  notebook-bugs-and-fixes.md  notebook-callout-blocks.md  notebook-collapsible-sections.md  notebook-exercise-blocks.md  notebook-image-grid.md  notebook-inline-heatmaps.md
docs/: examples.md  functions.md  notebooks.md  quickref.md  validate_octave_report.md
examples/: bandpass.r  complex_basics.r  contour.r  controls_design.r  fft.r  firpm.r  fixed_point.r  functions.r  kaiser_fir.r  lambda.r  lambda_pipeline.r  lowpass.r  matrix_ops.r  ml_activations.r  multi_figure.r  profiling.r  random.r  report_demo.r  save_load.r  stats.r  surf.r  toml_config.toml  toml_filter_chain.r  toml_filter_chain.toml  toml_io.r  trig_special.r  upfirdn.r  vector_calc.r  vectors.r
examples/audio/: filter.r  linux.sh  macos.sh  passthrough.r  realtime_fir.r  spectrum_monitor.r  spectrum_monitor.sh  tcp.sh  test_filter.sh  wsl.sh
examples/controls/: PLAN.md  all_any.r  bode_plot.r  classical_control.r  controllability.r  controls_phase1.r  disp_fprintf.r  if_else.r  linear_algebra.r  lqr_design.r  ode.r  pid_controller.r  pole_zero.r  rank.r  root_locus.r  roots.r  stability_margins.r  state_space.r  step_response.r  transfer_function.r
examples/notebooks/: contour_plots.md  filter_analysis.md  firpm_quantization.md  multi_notebook.md  quick_look.md  spectral_estimation.md  string_arrays.md  surface_plots.md  template_interpolation.md  vector_calculus.md
examples/sparse/: sparse.r
examples/stream/: filter.r  linux.sh  macos.sh  spectrum_monitor.r  tcp.sh  test_no_hardware.sh  wsl.sh
examples/tensor3/: tensor3.r
perf/: bench_builtins.r  bench_convolve.r  bench_fft.r  bench_filter_design.r  bench_interpreter.r  bench_linalg.r  bench_upfirdn.r  performance.md  report.md  run_perf.sh
tests/octave/: .gitignore  compare.m  compare_full.m  reference.m  reference_full.m  run_compare.sh  rustlab_full.r  rustlab_outputs.r
