[workspace]
members = [
    "crates/rustlab-core",
    "crates/rustlab-dsp",
    "crates/rustlab-plot",
    "crates/rustlab-script",
    "crates/rustlab-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[workspace.dependencies]
num-complex  = "0.4"
ndarray      = "0.16"
rand         = "0.8"
rand_distr   = "0.4"
zip          = { version = "2", default-features = false, features = ["deflate"] }
thiserror    = "2"
anyhow       = "1"
rustlab-core   = { path = "crates/rustlab-core" }
rustlab-dsp    = { path = "crates/rustlab-dsp" }
rustlab-plot   = { path = "crates/rustlab-plot" }
rustlab-script = { path = "crates/rustlab-script" }
