[workspace]
members = [
    "crates/rustlab-core",
    "crates/rustlab-dsp",
    "crates/rustlab-plot",
    "crates/rustlab-script",
    "crates/rustlab-cli",
    "crates/rustlab-proto",
    "crates/rustlab-viewer",
    "crates/rustlab-notebook",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
authors     = ["Michael Kreeger"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/mkreeger/rustlab"
description = "A matrix algebra and DSP toolkit — scriptable from the command line or embedded in applications"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[workspace.dependencies]
num-complex  = "0.4"
ndarray      = "0.16"
rand         = "0.8"
rand_distr   = "0.4"
zip          = { version = "2", default-features = false, features = ["deflate"] }
toml         = "0.8"
thiserror    = "2"
anyhow       = "1"
rustlab-core   = { path = "crates/rustlab-core",   version = "0.1.4" }
rustlab-dsp    = { path = "crates/rustlab-dsp",    version = "0.1.4" }
rustlab-plot   = { path = "crates/rustlab-plot",    version = "0.1.4" }
rustlab-script = { path = "crates/rustlab-script",  version = "0.1.4" }
rustlab-proto  = { path = "crates/rustlab-proto",   version = "0.1.4" }
serde          = { version = "1", features = ["derive"] }
rmp-serde      = "1"
