[package]
name    = "rustlab-cli"
version.workspace = true
edition.workspace = true

[features]
default = []
viewer  = ["rustlab-script/viewer"]

[[bin]]
name = "rustlab"
path = "src/main.rs"

[dependencies]
rustlab-core.workspace   = true
rustlab-dsp              = { path = "../rustlab-dsp" }
rustlab-plot             = { path = "../rustlab-plot" }
rustlab-script           = { path = "../rustlab-script" }
clap                     = { version = "4", features = ["derive"] }
rustyline                = { version = "14", features = ["derive"] }
anyhow.workspace         = true
num-complex.workspace    = true
ndarray.workspace        = true

[dev-dependencies]
tempfile = "3"
