[package]
name        = "rustlab-cli"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
description = "Command-line interface and REPL for rustlab"
default-run = "rustlab"

[features]
default = []
viewer  = ["rustlab-script/viewer"]

[[bin]]
name = "rustlab"
path = "src/main.rs"

[dependencies]
rustlab-core.workspace   = true
rustlab-dsp.workspace    = true
rustlab-plot.workspace   = true
rustlab-script.workspace = true
clap                     = { version = "4", features = ["derive"] }
rustyline                = { version = "14", features = ["derive"] }
anyhow.workspace         = true
num-complex.workspace    = true
ndarray.workspace        = true

[dev-dependencies]
tempfile = "3"
