[package]
name        = "rustlab-core"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
description = "Core matrix and complex-number types for rustlab"

[dependencies]
num-complex.workspace = true
ndarray.workspace     = true
thiserror.workspace   = true

[dependencies.ndarray-linalg]
version  = "0.17"
optional = true

[features]
default = []
linalg  = ["dep:ndarray-linalg"]
