[package]
name    = "rustlab-plot"
version.workspace = true
edition.workspace = true

[dependencies]
rustlab-core.workspace = true
num-complex.workspace  = true
ndarray.workspace      = true
ratatui    = "0.29"
crossterm  = "0.28"
thiserror.workspace    = true
plotters   = { version = "0.3", default-features = false, features = [
    "svg_backend",
    "bitmap_backend",
    "bitmap_encoder",
    "all_series",
    "all_elements",
    "full_palette",
] }
