[package]
name        = "rustlab-plot"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
description = "Terminal and SVG plotting for rustlab"

[features]
default = []
viewer  = ["dep:rustlab-proto", "dep:rmp-serde"]

[dependencies]
rustlab-core.workspace = true
num-complex.workspace  = true
ndarray.workspace      = true
ratatui    = "0.29"
crossterm  = "0.28"
thiserror.workspace    = true
serde_json = "1"

# Optional viewer deps (only pulled in with `--features viewer`)
rustlab-proto = { workspace = true, optional = true }
rmp-serde     = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
plotters   = { version = "0.3", default-features = false, features = [
    "svg_backend",
    "bitmap_backend",
    "bitmap_encoder",
    "all_series",
    "all_elements",
    "full_palette",
] }
