[package]
name        = "rustlab-script"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
description = "Interpreter and builtins for the rustlab scripting language"

[features]
default = []
viewer  = ["rustlab-plot/viewer"]

[dependencies]
rustlab-core.workspace  = true
rustlab-dsp.workspace   = true
rustlab-plot.workspace  = true
num-complex.workspace   = true
ndarray.workspace       = true
thiserror.workspace     = true
anyhow.workspace        = true
rand.workspace          = true
rand_distr.workspace    = true
zip.workspace           = true
toml.workspace          = true
